--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Justin's Portfolio</title>
+    <title>Justin's Hobbies</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -21,15 +21,6 @@
             transform: scale(1.1);
         }
 
-        .intro-section h1 {
-            font-size: 5.5rem;
-            font-weight: 800px;
-        }
-
-        .intro-section p {
-            font-size: 1.25rem;
-            margin-top: 50px;
-        }
 
         /* Toggle menu styling for mobile */
         .mobile-menu {
@@ -38,7 +29,7 @@
     </style>
 </head>
 <body>
-    <!-- Navbar Section -->
+   <!-- Navbar Section -->
 <nav class="navbar bg-black w-full p-5">
     <div class="container mx-auto flex items-center justify-between font-bold leading-tight">
         <!-- Left Justin's Portfolio -->
@@ -113,31 +104,68 @@
         </ul>
     </nav>
 
-   <!-- Introduction Section -->
-<section class="intro-container flex flex-col md:flex-row justify-center items-center mt-16 px-8 mx-auto w-full max-w-screen-xl">
-    <!-- Left side: Introduction content -->
-    <div class="intro-section text-center md:text-left w-full md:w-1/2 mb-8 md:mb-0 px-4">
-      <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-8" style="color: #FFAB00;">
-        Welcome to My Personal Portfolio
-      </h1>
-      <p class="text-white text-lg md:text-xl leading-relaxed mb-8">
-        I created this portfolio based on my Curriculum Vitae with improvements and to showcase my Front-End 💻, Data💹, Hobbies 🎮🎶, and PowerBI Skills 🛠 in this portfolio. The design on this portfolio was inspired by a video game I've been playing
-      </p>
-    </div>
-  
-    <!-- Right side: Photo -->
-    <div class="photo-section flex justify-center w-full md:w-1/2 px-4">
-      <img src="Rome.png" alt="Your Photo" class="rounded-lg shadow-lg w-[400px] h-[400px] md:w-[500px] md:h-[500px] object-cover">
-    </div>
-  </section>
-  
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hobbies - Justin's Portfolio</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap');
+        
+        body {
+            font-family: 'Helvetica Neue', sans-serif;
+            background-color: #141414;
+            color: #ffffff;
+        }
+    </style>
+</head>
+<body>
+   
+<!-- Hobbies Section -->
+<section class="hobbies-section py-16 px-8">
+    <div class="container mx-auto max-w-screen-lg">
+        <!-- Games Section -->
+        <div class="mb-16">
+            <h2 class="text-4xl md:text-5xl font-bold text-center mb-12" style="color: #FFAB00;">
+                Favorite Games
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Game 1 -->
+                <div class="game-card bg-gray-800 p-6 rounded-lg shadow-lg">
+                    <img src="batman.jpg" alt="Game 1" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-2xl font-bold text-white mb-1">Batman Arkham Knight</h3>
+                    <p class="text-gray-300">I love solving puzzles which improves my logic skills and my favorite superhero is Batman</p>
+                </div>
+                <!-- Game 2 -->
+                <div class="game-card bg-gray-800 p-6 rounded-lg shadow-lg">
+                    <img src="rdr2.png" alt="Game 2" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-1xl font-bold text-white mb-2">Red Dead Redemption 2     </h3>
+                    <p class="text-gray-300">I enjoy exploring vast open world and and the adventure as an outlaw and the story of Arthur Morgan.</p>
+                </div>
+                <!-- Game 3 -->
+                <div class="game-card bg-gray-800 p-6 rounded-lg shadow-lg">
+                    <img src="valo.png" alt="Valorant" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-2xl font-bold text-white mb-1">Valorant</h3>
+                    <p class="text-gray-300">A fun to play game with Friends.</p>
+                </div>
+            </div>
 
-    <!-- JavaScript for toggling mobile menu -->
-    <script>
-        document.getElementById('menu-button').addEventListener('click', function() {
-            const navbarLinks = document.querySelector('.navbar-links');
-            navbarLinks.classList.toggle('hidden');
-        });
-    </script>
+                </div>
+            </div>
+            <!-- Spotify Section -->
+            <div>
+                <h2 class="text-4xl md:text-5xl font-bold text-center mb-12" style="color: #FFAB00;">
+                    Spotify Playlist
+                </h2>
+                <div class="spotify-embed flex justify-center">
+                    <!-- Replace the src with your Spotify track or playlist embed link -->
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3pnOoozCFbYOeiKGNEaNpD?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                   </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
